# mariam

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL_LICENSE_TEMPLATE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.yml
server/: .dockerignore  Dockerfile  Dockerfile.prod  conftest.py  entrypoint.prod.sh  pyproject.toml  requirements.txt  run.py  scheduler.py
server/app/: __init__.py  extensions.py  logging_config.py  security.py
server/app/commands/: demo.py  seed.py
server/app/data/: __init__.py  taxonomy.py
server/app/models/: __init__.py  activation_link.py  audit_log.py  catalog.py  category.py  event.py  exceptional_closure.py  gallery.py  import_session.py  menu.py  notification.py  organization.py  passkey.py  push_subscription.py  restaurant.py  restaurant_calendar.py  taxonomy.py  user.py
server/app/routes/: __init__.py  admin.py  api_v1.py  audit.py  auth.py  catalog.py  categories.py  closures.py  csv_import.py  events.py  gallery.py  helpers.py  imports.py  inbox.py  menus.py  notifications.py  org.py  public.py  restaurant.py  seo.py  taxonomy.py  users.py
server/app/schemas/: __init__.py  auth.py  catalog.py  closures.py  common.py  events.py  gallery.py  imports.py  inbox.py  menus.py  notifications.py  restaurant.py  taxonomy.py  users.py
server/app/scripts/: __init__.py  run_migrations.py
server/app/services/: __init__.py  crypto.py  csv_import.py  (+4 more)
server/scripts/: run_migrations.py
server/tests/: test_auth.py  test_catalog.py  test_categories.py  test_crypto.py  test_csv_import.py  test_hardening.py  test_inbox.py  test_menus.py  test_public_menu.py  test_public_slugged.py  test_restaurant.py  test_seo.py  test_storage.py  test_tenant_isolation.py  test_users.py
(+230 files in other folders)
