[project]
name = "mariam-backend"
version = "0.11.1"
description = "MARIAM — SaaS de gestion de menus pour restaurants universitaires"
requires-python = ">=3.11"
dependencies = [
    # Framework
    "Flask==3.0.2",
    "Flask-SQLAlchemy==3.1.1",
    "SQLAlchemy==2.0.23",
    "Flask-CORS==4.0.0",
    "Flask-Migrate==4.0.5",
    "Werkzeug==3.0.1",
    "python-dotenv==1.0.0",
    # Database
    "psycopg2-binary==2.9.9",
    # Auth / JWT / MFA
    "Flask-JWT-Extended==4.6.0",
    "pyotp==2.9.0",
    "webauthn>=2.0.0",
    "qrcode[pil]==8.2",
    # API docs
    "flask-smorest==0.44.0",
    "marshmallow==3.21.0",
    # Storage S3
    "boto3>=1.28.0",
    # Image processing
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    # Rate limiting
    "Flask-Limiter>=3.5.0",
    "redis>=5.0.0",
    # Push notifications
    "pywebpush>=2.0.0",
    "py-vapid>=1.9.0",
    # Scheduler
    "APScheduler>=3.10.0",
    # File parsing
    "openpyxl>=3.1.0",
    "chardet>=5.0.0",
    # WSGI
    "gunicorn==21.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-flask>=1.3",
    "pytest-cov>=5",
    "factory-boy>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]  # B008: Flask default-arg patterns; E501: line length not enforced

[tool.ruff.lint.per-file-ignores]
# Models imported for SQLAlchemy registration (side-effect imports)
"app/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing -q"
